--- a/src/globalStyles/reset.css
+++ b/src/globalStyles/reset.css
@@ -44,7 +44,9 @@ textarea,
 select {
   font: inherit;
 }
-
+body {
+  font-family: var(--ff-sans);
+}
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
