added one more red color to variables

--- a/src/globalStyles/variables.css
+++ b/src/globalStyles/variables.css
@@ -7,6 +7,7 @@ body {
   --clr-blue-400: #aed5dc;
   --clr-orange-400: #fea34f;
   --clr-red-700: #ab2b2b;
+  --clr-red-500: #df3353;
   --clr-yellow-300: #f8d782;
   --clr-yellow-400: #f4d074;
   --clr-green-400: #3b443f;
