--- a/src/globalStyles/reset.css
+++ b/src/globalStyles/reset.css
@@ -47,6 +47,11 @@ select {
 body {
   font-family: var(--ff-sans);
 }
+a {
+  color: var(--clr-white);
+  text-decoration: none;
+  font-size: var(--fs-regular);
+}
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
