--- a/src/globalStyles/variables.css
+++ b/src/globalStyles/variables.css
@@ -25,6 +25,7 @@ body {
   --fs-xl: 1.8rem;
   --fs-logo: 1.6rem;
   --fs-main-nav: 1.1rem;
+  --fs-icon: 1.8rem;
 }
 
 /* media query for 1000px */
