--- a/src/globalStyles/variables.css
+++ b/src/globalStyles/variables.css
@@ -61,6 +61,10 @@ body {
   --bg-cart-card: var(--clr-white);
   --clr-cart-card: var(--clr-black);
 
+  /* Error page */
+  --bg-error-page: var(--clr-black);
+  --clr-error-page: var(--clr-white);
+
   /*  */
   /* font family */
   /*  */
