--- a/src/globalStyles/variables.css
+++ b/src/globalStyles/variables.css
@@ -13,6 +13,7 @@ body {
   --clr-yellow-300: #f8d782;
   --clr-yellow-400: #f4d074;
   --clr-yellow-500: #ffd848;
+  --clr-green-350: rgb(109, 176, 109);
   --clr-green-400: #3b443f;
   --clr-green-450: #16574a;
   --clr-green-500: #252c28;
@@ -25,6 +26,7 @@ body {
   --bg-notification: var(--gradient-orange);
   --clr-notification: var(--clr-black);
   --clr-error: var(--clr-red-500);
+  --clr-success: var(--clr-green-350);
   /* header colors */
   --bg-header: var(--clr-black);
   --clr-header: var(--clr-white);
@@ -78,6 +80,11 @@ body {
   /* update page */
   --bg-update-page: var(--clr-black);
   --clr-update-page: var(--clr-white);
+  /* add product page */
+  --bg-add-product-page: var(--clr-white);
+  --clr-add-product-page: var(--clr-black);
+  --bg-add-product-form: var(--clr-black);
+  --clr-add-product-form: var(--clr-white);
 
   /*  */
   /* font family */
