changed text color of this page from black to white

--- a/src/globalStyles/variables.css
+++ b/src/globalStyles/variables.css
@@ -82,7 +82,7 @@ body {
   --clr-update-page: var(--clr-white);
   /* add product page */
   --bg-add-product-page: var(--clr-black);
-  --clr-add-product-page: var(--clr-black);
+  --clr-add-product-page: var(--clr-white);
   --bg-add-product-form: var(--clr-black);
   --clr-add-product-form: var(--clr-white);
 
